# ChangeLog for media-video/yle-dl
# Distributed under the terms of the GNU General Public License v2
# Copyright 2015-2015 Tuomo Hartikainen <tth@harski.org>

  15 Jul 2015; Tuomo Hartikainen <tth@harski.org> +metadata.xml:
  Add metadata.xml

*yle-dl-2.5.0-r3 (23 Jan 2015)

  23 Jan 2015; Tuomo Hartikainen <tth@harski.org> +yle-dl-2.5.0-r3.ebuild:
  Move AdobeHDS.php to /usr/share/
